--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Presentation title"
-subtitle: "Presentation subtitle (if any)"
-author: "Team name <br> Names of team members"
+title: "COVID-19"
+subtitle: ""
+author: "Du Shi,Zhe Xue,Kunning Zhang,Zhaojun Meng,Wenhui Zhang"
 institute: "University of Edinburgh"
 date: "`r Sys.Date()`"
 output:
@@ -29,7 +29,12 @@ knitr::opts_chunk$set(fig.retina = 3, dpi = 300, fig.width = 6, fig.asp = 0.618,
 ```
 
 ```{r load-data, include=FALSE}
-# Load your data here
+worldometer_data <- read_csv("worldometer_data.csv")
+country_wise_latest <- read_csv("country_wise_latest.csv")
+covid_19_clean_complete <- read_csv("covid_19_clean_complete.csv")
+day_wise <- read_csv("day_wise.csv")
+full_grouped <- read_csv("full_grouped.csv")
+usa_county_wise <- read_csv("usa_county_wise.csv")
 ```
 
 ```{r include=FALSE}
