--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -57,8 +57,21 @@ class: inverse
 ```{r echo=FALSE}
 glimpse(full_grouped)
 ```
+---
+class: inverse
 
 
+```{r echo=FALSE}
+glimpse(country_wise_latest)
+```
+---
+class: inverse
+
+
+
+```{r echo=FALSE}
+glimpse(usa_county_wise)
+```
 ---
 
 class: inverse, center, middle
