--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -90,26 +90,45 @@ As of 30 January 2020, approximately 8,243 cases have been confirmed.
 So we will talk about the situation of COVID-19 in 2020 and the physical condition of patients.
 ---
 class: inverse, middle, center
-#1.The country which was affected most.
+#1.World overview.
+
+Graphing the number of confirmed cases and deaths.This gives us a big picture of the past COVID-19 in 2020.
 ---
 class:inverse
 
-A totally trend of the confirmed number in 2020 is showed below.
+The totally trend of the confirmed cases and deaths number in 2020 is showed in following two graphs.
 ```{r echo=FALSE}
 full_grouped %>%
-ggplot(aes(x=Date,y=Confirmed,color=`WHO Region`)) +
-geom_line()
-       
+  ggplot(aes(x = Date , y = Confirmed)) +
+  geom_line()+
+  scale_x_date(date_breaks = "1 month",labels = date_format("%m"))+
+  labs(title = "Number Of COVID-19 Cases Over Time",
+       y = "Number of cases",
+       x = "Months(from 2020-01-22)")+
+  theme(panel.grid.major=element_line(colour=NA))+
+  theme_bw()
 ```
-
-From this graph,it is clear that COVID-19 began to spread in the world in April of 2020 and Americas region isthe hardest-hit area.
-
 
 
 ---
 class:inverse
-Top 15 countries
 
+The totally trend of the confirmed cases number in 2020 is showed below.
+```{r echo=FALSE}
+full_grouped %>%
+  ggplot(aes(x = Date , y = Deaths)) +
+  geom_line()+
+  scale_x_date(date_breaks = "1 month",labels = date_format("%m"))+
+  labs(title = "Number Of COVID-19 Deaths Over Time",
+       y = "Number of deaths",
+       x = "Months(from 2020-01-22)")+
+  theme(panel.grid.major=element_line(colour=NA))+
+  theme_bw()
+```
+
+---
+class:inverse
+Top 15 countries in the number of confirmed cases
 
 ```{r echo=FALSE}
 country_wise_latest %>%
@@ -119,16 +138,33 @@ country_wise_latest %>%
   geom_col()+
   geom_text(aes(label = Confirmed), 
             vjust = 0,
-            size = 3,
+            size = 2,
             colour = "black") +
   labs(title = "Confirmed Cases Worldwide",
        y = "Country",
-       x = "Number of confirmed")
+       x = "Number of confirmed cases")
+
 ```
 
+---
+class:inverse
+Top 15 countries in the number of deaths
 
-
-
+```{r echo=FALSE}
+country_wise_latest %>%
+  arrange(desc(Deaths)) %>%
+  slice(1:15) %>%
+  ggplot(aes(x = Deaths , y = reorder(`Country/Region`,Deaths),fill = `WHO Region`)) +
+  geom_col()+
+  geom_text(aes(label = Deaths), 
+            vjust = 0,
+            size = 2,
+            colour = "black") +
+  labs(title = "Deaths Cases Worldwide",
+       y = "Country",
+       x = "Number of deaths")
+```
+From all these graphs above,it is clear that COVID-19 began to spread in the world in April of 2020 and Americas region is the hardest-hit area in both deaths and confirmed number.
 ---
 class:inverse,middle,center
 
