--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -57,7 +57,7 @@ https://www.kaggle.com/datasets/rishanmascarenhas/covid19-temperatureoxygenpulse
 ---
 class: inverse
 
-#These are glimpses of our dataset
+#These are glimpses of our datasets
 
 ```{r echo=FALSE}
 glimpse(full_grouped)
