--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -40,6 +40,7 @@ covid_19_clean_complete <- read_csv("data/covid_19_clean_complete.csv")
 country_wise_latest <- read_csv("data/country_wise_latest.csv")
 qt <- read_csv("data/qt.csv")
 usa_county_wise1 <- read_csv("data/usa_county_wise1.csv")
+usa_county_wise2 <- read_csv("data/usa_county_wise2.csv")
 ```
 
 ```{r include=FALSE}
@@ -275,13 +276,13 @@ qt_pred %>%
 class:inverse
 
 #Thanks！
-```{r}
-usa <-usa_county_wise1
+```{r echo=FALSE}
+usa <-usa_county_wise2
 mapdata2<- map_data("state")
 mapdata3 <- left_join(mapdata2, usa , by = "region")
 mapdata4 <- mapdata3 %>% 
   filter(!is.na(mapdata3$Confirmed))
-map1<- ggplot(mapdata3,aes(x= long, y=lat, group=group))+
+map1<- ggplot(mapdata4,aes(x= long, y=lat, group=group))+
   geom_polygon(aes(fill= Confirmed), color="black")
 map1
 
