--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -204,6 +204,7 @@ map2<-map1 + scale_fill_gradient(name= "covid worldwide", high = "red", low = "g
         axis.title.y = element_blank())
 map2
 ```
+
 So, it is clear that in the year of 2020, south America suffered from covid-19 the most, followed by southern Asia.
 
 
@@ -224,7 +225,8 @@ map2<-map1 +
         axis.title.y = element_blank())
 map2
 ```
-From the map we can find that there at 4 remarkable bright blue area represented by the top four population states in America, suggesting us that it is better to live in less populous area when meeting series Epidemic disease.
+
+From the map we can find that there at 4 remarkable bright blue area represented by the top four most populous states in America, which are California, Texas, Florida, and New York separately.
 ---
 class:inverse,middle,center
 #4.Predicting positive results of COVID-19 
